[gd_scene load_steps=10 format=3 uid="uid://b4bjan5evidju"]

[ext_resource type="Script" path="res://CombatSystem/Battler/BattlerAnim.gd" id="1_nbmbl"]
[ext_resource type="Texture2D" uid="uid://cmcqejvjm0hyi" path="res://CombatSystem/Battler/Animation/bear.png" id="1_t0jnq"]

[sub_resource type="Animation" id="Animation_h00be"]
resource_name = "_setup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0bg2b"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-100, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["triggered"],
"method": &"emit_signal"
}]
}

[sub_resource type="Animation" id="Animation_yvuxf"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.282353, 1, 1, 1), Color(1, 0.145098, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 0.0705882, 1), Color(0.168627, 0.396078, 0.376471, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_2b682"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.282353, 1, 1, 1), Color(1, 0.145098, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 0.0705882, 1), Color(0.168627, 0.396078, 0.376471, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jmww"]
_data = {
"_setup": SubResource("Animation_h00be"),
"attack": SubResource("Animation_0bg2b"),
"damage": SubResource("Animation_yvuxf"),
"die": SubResource("Animation_2b682")
}

[sub_resource type="Animation" id="Animation_su3ie"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.176471, 1, 1), Color(0, 0.615686, 0.615686, 1), Color(1, 0.0588235, 0.121569, 1), Color(1, 1, 1, 1), Color(1, 0.137255, 1, 0.345098), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkidb"]
_data = {
"damage": SubResource("Animation_su3ie")
}

[node name="BattlerAnim" type="Marker2D"]
script = ExtResource("1_nbmbl")
direction = 0

[node name="Pivot" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
libraries = {
"": SubResource("AnimationLibrary_6jmww")
}
autoplay = "_setup"

[node name="AnimationPlayerDamage" type="AnimationPlayer" parent="Pivot"]
libraries = {
"": SubResource("AnimationLibrary_xkidb")
}

[node name="Sprite" type="Sprite2D" parent="Pivot"]
position = Vector2(3, 3)
texture = ExtResource("1_t0jnq")
offset = Vector2(-10, -195)

[node name="FrontAnchor" type="Marker2D" parent="."]
position = Vector2(226, -226)
gizmo_extents = 30.0

[node name="TopAnchor" type="Marker2D" parent="."]
position = Vector2(10, -373)
gizmo_extents = 30.0
